# ExplicitLM

./: .cluster_state_exp_001 cluster  .cluster_state_exp_001_cluster  .experiment_meta_exp_001 cluster  .experiment_meta_exp_001_cluster  .experiment_meta_final_test  .experiment_meta_final_test2  .experiment_meta_test_exp  .experiment_meta_test_val  .gitignore  .swanlab_url_exp_001_cluster  1_pretrain.py  2_sft.py  CLEANUP_SUMMARY.md  GIT_COMMIT_GUIDE.md  README.md  accelerate_config.yaml  cache.dvc  convert_conversations_to_labeled.py  ds_config.json  main.py  outputs.dvc  pyproject.toml  test_hydra_zen.sh  train_fusion.py  train_joint.py  train_memory.py  train_router.py
.dvc/: config
checkpoints/: dvc_test.dvc  dvc_test2.dvc  dvc_test3.dvc  dvc_test4.dvc  exp_001_hydra_zen.dvc  final_test2.dvc  hydra_test.dvc  swanlab_test.dvc  test_exp.dvc  test_val.dvc  verify_final.dvc
config/: __init__.py  dataset.py  logging.py  model.py  qwen3_4b_params.py  training.py
data/: .gitignore  benchmarks.dvc  database.dvc  knowledge_base.dvc  meta.json
doc/: hydra-zen.md
docs/: GIT_SETUP.md  SFT_TRAINING.md  dvc_guide.md  experiment_workflow.md  hydra-zen.md  uv.md
examples/: quick_start.py
scripts/: convert_omcq_to_sft.py  push_qwen_branch.sh  run_router.sh  run_sft.sh  run_sft_gpu67.sh  run_sft_omcq.sh  test_sft_data.py
utils/: config_utils.py  dual_path_inference.py  fact_extractor.py  logger.py  memory_bank_updater.py  model_initializer.py  pretrain_datasets.py  sft_datasets.py  train_loop.py  train_loop_pretrain.py  train_loop_sft.py  train_utils.py
(+91 files in other folders)
